# payments-engine-challenge

./: CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.claude/agents/: developer.md  reviewer.md
benches/: throughput.rs
docs/: concurrency-benchmarks.md  data-structures-benchmarks.md
scripts/: bench_summary.sh
src/: bench_support.rs  concurrency.rs  engine.rs  lib.rs  main.rs  mem.rs
src/concurrency/: actor_crossbeam.rs  actor_std.rs  baseline.rs  dashmap_engine.rs  mutex.rs  workload.rs
src/engine/: account.rs  error.rs  io.rs  ledger.rs  tests.rs  transaction.rs  v1.rs  v2.rs
src/engine/v1/: account.rs  error.rs  io.rs  ledger.rs  tests.rs  transaction.rs
src/engine/v2/: io.rs  tests.rs
tests/: scenarios.rs
tests/samples/: deposit_dispute_chargeback.csv  deposit_dispute_resolve.csv  deposit_one_decimal_renders_four.csv  deposit_then_dispute.csv  deposits_and_withdrawals.csv  deposits_only.csv  duplicate_tx_ids_first_wins.csv  fraud_sequence_negative_balance.csv  malformed_row_skipped_continues.csv  mixed_ignorable_events.csv  non_positive_amounts_rejected.csv  prior_dispute_resolve_after_lock.csv  redispute_after_resolve.csv  unknown_row_skipped.csv
tests/snapshots/: scenarios__deposit_dispute_chargeback.snap  scenarios__deposit_dispute_resolve.snap  scenarios__deposit_one_decimal_renders_four.snap  scenarios__deposit_then_dispute.snap  scenarios__deposits_and_withdrawals.snap  scenarios__deposits_only.snap  scenarios__duplicate_tx_ids_first_wins.snap  scenarios__fraud_sequence_negative_balance.snap  scenarios__malformed_row_skipped_continues.snap  scenarios__mixed_ignorable_events.snap  scenarios__non_positive_amounts_rejected.snap  scenarios__prior_dispute_resolve_after_lock.snap  scenarios__redispute_after_resolve.snap  scenarios__unknown_row_skipped.snap
