[package]
name = "payments-engine-challenge"
version = "0.1.0"
edition = "2024"

[features]
# Pulls in the synthetic workload generator and exposes the memory-bench
# binaries. Off by default so the production build stays free of benchmark
# code paths and dependencies.
bench = ["dep:rand", "dep:libc"]

[dependencies]
anyhow = "1"
csv = "1"
env_logger = "0.11"
libc = { version = "0.2", optional = true }
log = "0.4"
rand = { version = "0.10", optional = true }
rust_decimal = { version = "1", features = ["serde-str"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
criterion = "0.8"
insta = "1"
