[package]
name = "payments-engine-challenge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
csv = "1"
env_logger = "0.11"
log = "0.4"
rust_decimal = { version = "1", features = ["serde-str"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
insta = "1"
